--- a/about.html
+++ b/about.html
@@ -8,7 +8,34 @@
 </head>
 <body>
     <header>
+        <a class="header-logo" href="index.html">
+            <img src="images/logo.jpg" alt="image of Communitiy Science logo" class="headerlogo">
+        </a>
 
+        <nav>
+            <ul class="navlist">
+                <li class="navitem">
+                    <a href="index.html" class="navlinkcurrent">
+                        <h3>Home</h3>
+                    </a>
+                </li>
+                <li class="navitem">
+                    <a href="about.html" class="navlink">
+                        <h3>About</h3>
+                    </a>
+                </li>
+                <li class="navitem">
+                    <a href="exhibitions.html" class="navlink">
+                        <h3>Tour Dates</h3>
+                    </a>
+                </li>
+                <li class="navitem">
+                    <a href="getinvolved.html" class="navlink">
+                        <h3>Contact</h3>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <footer>
         
