--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
         <nav>
             <ul class="navlist">
                 <li class="navitem">
-                    <a href="index.html" class="navlinkcurrent">
+                    <a href="index.html" class="nav-link-current">
                         <h3>Home</h3>
                     </a>
                 </li>
                 <li class="navitem">
-                    <a href="about.html" class="navlink">
+                    <a href="about.html" class="nav-link">
                         <h3>About</h3>
                     </a>
                 </li>
                 <li class="navitem">
-                    <a href="exhibitions.html" class="navlink">
+                    <a href="exhibitions.html" class="nav-link">
                         <h3>Tour Dates</h3>
                     </a>
                 </li>
                 <li class="navitem">
-                    <a href="getinvolved.html" class="navlink">
+                    <a href="getinvolved.html" class="nav-link">
                         <h3>Contact</h3>
                     </a>
                 </li>
