--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a class="header-logo" href="index.html">
-            <img src="images/logo.jpg" alt="image of Communitiy Science logo" class="headerlogo">
+            <img src="images/logo3.png" alt="image of Communitiy Science logo" class="headerlogo">
         </a>
 
         <nav>
