--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 
     </header>
     <main>
-      
+        <div class="member-container">
+            <img src="images/members.png" alt="Danzig cancer slug symbol. A sickle moon, with a lightning trough it." class="cancer-slug">
+        </div>
+        
+
     </main>
     <footer>
 
