--- a/about.html
+++ b/about.html
@@ -10,34 +10,44 @@
 <body>
     <header>
         <a class="header-logo" href="index.html">
-            <img src="images/logo.jpg" alt="image of Communitiy Science logo" class="headerlogo">
+            <img src="images/logo3.png" alt="Misfits logo, with the Crimson ghost behind it" class="header-logo">
         </a>
 
         <nav>
-            <ul class="navlist">
-                <li class="navitem">
-                    <a href="index.html" class="navlinkcurrent">
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link">
                         <h3>Home</h3>
                     </a>
                 </li>
-                <li class="navitem">
-                    <a href="about.html" class="navlink">
+                <li class="nav-item">
+                    <a href="about.html" class="nav-link-current">
                         <h3>About</h3>
                     </a>
                 </li>
-                <li class="navitem">
-                    <a href="exhibitions.html" class="navlink">
+                <li class="nav-item">
+                    <a href="tourDates.html" class="nav-link">
                         <h3>Tour Dates</h3>
                     </a>
                 </li>
-                <li class="navitem">
-                    <a href="getinvolved.html" class="navlink">
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link">
                         <h3>Contact</h3>
                     </a>
                 </li>
             </ul>
         </nav>
+        <img src="images/danzig.png" alt="Danzig cancer slug symbol. A sickle moon, with a lightning trough it." class="cancer-slug">
     </header>
+
+    <main class="inverted">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </main>
+
     <footer>
         
     </footer>
