--- a/index.html
+++ b/index.html
@@ -38,13 +38,27 @@
             </ul>
         </nav>
         <img src="images/danzig.png" alt="Danzig cancer slug symbol. A sickle moon, with a lightning trough it." class="cancer-slug">
-
     </header>
+    
     <main>
+        <div class="home-text">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam animi, modi</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt magnam nisi odio impedit culpa mollitia! Commodi perferendis officia, corporis sapiente blanditiis, obcaecati minus dolorum aperiam ad nostrum praesentium, assumenda quia?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem doloribus quam rem nihil placeat quasi iure praesentium expedita amet eligendi possimus, architecto officia totam laboriosam eaque dolores minima alias. Dolorem.</p>
+    </div>
+
         <div class="member-container">
-            <img src="images/members.png" alt="Danzig cancer slug symbol. A sickle moon, with a lightning trough it." class="cancer-slug">
+            <img src="images/members.png" class="member-photo" alt="Danzig cancer slug symbol. A sickle moon, with a lightning trough it." class="cancer-slug">
         </div>
         
+        <div class="disc-container">
+
+        <div class="discography">
+
+        </div>
+
+        </div>
+
 
     </main>
     <footer>
