--- a/about.html
+++ b/about.html
@@ -41,12 +41,21 @@
     </header>
 
     <main class="inverted">
+
+        <div class="band-member">
+            <img src="https://via.placeholder.com/60x60">
+            <span style="">Works.</span>
+        </div>
+        <div>
+            <span style=""></span>
+            <img src="https://via.placeholder.com/60x60">
+        </div>
         <div></div>
         <div></div>
         <div></div>
-        <div></div>
-        <div></div>
+
     </main>
+
 
     <footer>
         
