--- a/tourDates.html
+++ b/tourDates.html
@@ -21,8 +21,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html" class="nav-link">
-                        <h3>About</h3>
+                    <a href="bandMembers.html" class="nav-link">
+                        <h3>Band Members</h3>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -39,6 +39,11 @@
         </nav>
         <img src="images/danzig.png" alt="Danzig cancer slug symbol. A sickle moon, with a lightning trough it." class="cancer-slug">
     </header>
+
+    <main>
+        
+    </main>
+
     <footer>
         
     </footer>
