--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html" class="nav-link">
-                        <h3>About</h3>
+                    <a href="bandMembers.html" class="nav-link">
+                        <h3>Band Members</h3>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -39,7 +39,7 @@
         </nav>
         <img src="images/danzig.png" alt="Danzig cancer slug symbol. A sickle moon, with a lightning trough it." class="cancer-slug">
     </header>
-    
+
     <main>
         <div class="home-text">
         <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam animi, modi</h1>
