--- a/tourDates.html
+++ b/tourDates.html
@@ -41,7 +41,24 @@
     </header>
 
     <main>
-        
+        <div>
+        <div class="band-member">
+            <img class="member-image"src="images/danzigmember.png" alt="A picture of Danzig, vocalist of the band.">
+            <div class="member-info">
+                <h2>Glenn Danzig</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+            </div>
+        </div>
+
+        <div class="band-member">
+            <div class="member-info">
+                <h2>Jerry Only</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+            </div>
+            <img class="member-image" src="images/jerrymember.png" alt="A picture of Jerry Only, bass player of the band.">
+        </div>
+        </div>
+
     </main>
 
     <footer>
