--- a/bandMembers.html
+++ b/bandMembers.html
@@ -44,37 +44,51 @@
 
         <img src="images/CrimsonGhost.png" alt="A picture of the Crimson Ghost with the Misfits name behind him.">
 
-        <div class="band-member">
-            <img class="member-image"src="images/danzigmember.png" alt="A picture of Danzig, vocalist of the band.">
-            <div class="member-info">
-                <h2>Glenn Danzig</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
-            </div>
-        </div>
+        <h1>The Band Members!</h1>
 
-        <div class="band-member">
-            <div class="member-info">
-                <h2>Jerry Only</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+        <div>
+            <div class="box-holder">
+                <img class="member-photo" src="images/danzigmember.png" alt="A picture of Glenn Danzig vocalist of the band.">
+                <div class="box-info">
+                    <h2>Glenn Danzig</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt repellendus nisi alias tempora fugit harum? Voluptatem, ut. In, voluptate? Atque dicta odio est quidem ullam! Mollitia tenetur a laudantium recusandae!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nisi beatae dicta hic earum repudiandae possimus minima vero, delectus omnis ullam voluptatem, rerum voluptatum impedit ex culpa? Quis, iste doloremque.</p>
+                </div>
             </div>
-            <img class="member-image" src="images/jerrymember.png" alt="A picture of Jerry Only, bass player of the band.">
-        </div>
+    
+            <div class="box-holder">
+                <div class="box-info">
+                    <h2>Jerry Only</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ullam blanditiis rerum placeat veritatis qui eos commodi quo laboriosam sit minus quidem eum ratione, officia vel cumque! Quaerat, laboriosam odio!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati eos excepturi architecto exercitationem facilis ipsum provident quae accusantium. Ratione nobis, veritatis cum deleniti nemo earum qui praesentium. Corrupti!</p>
+                </div>
+                <img class="member-photo" src="images/jerrymember.png" alt="A poster of tour dates.">
+            </div>
+            </div>
 
-        <div class="band-member">
-            <img class="member-image" src="images/davemember.png" alt="A picture of Dave Lombardo, drummer of the band.">
-            <div class="member-info">
-                <h2>Dave Lombardo</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
-            </div>
-        </div>
-
-        <div class="band-member">
-            <div class="member-info">
-                <h2>Acey Slade</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
-            </div>
-            <img class="member-image" src="images/aceymember.png" alt="A picture of Acey Slade, guitarist of the band.">
-        </div>
+            <div>
+                <div class="box-holder">
+                    <img class="member-photo" src="images/davemember.png" alt="A poster of tour dates.">
+                    <div class="box-info">
+                        <h2>Dave Lombardo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, deserunt. Incidunt perferendis aliquam quis unde ipsa consectetur sit omnis, adipisci numquam tempora commodi neque itaque tempore nulla eius culpa et.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt iste dignissimos asperiores! Fugit nam magni, atque qui nemo repellat laboriosam repellendus pariatur eaque, optio error officiis eum corporis! Incidunt, magnam.</p>
+                    </div>
+                </div>
+        
+                <div class="box-holder">
+                    <div class="box-info">
+                        <h2>Acey Slade</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+                    </div>
+                    <img class="member-photo" src="images/aceymember.png" alt="A poster of tour dates.">
+                </div>
+                </div>
     </main>
 
 
