--- a/tourDates.html
+++ b/tourDates.html
@@ -41,21 +41,27 @@
     </header>
 
     <main>
+
+        <h1>Tour Dates</h1>
         <div>
-        <div class="band-member">
-            <img class="member-image"src="images/danzigmember.png" alt="A picture of Danzig, vocalist of the band.">
-            <div class="member-info">
-                <h2>Glenn Danzig</h2>
+        <div class="box-holder">
+            <img src="images/poster1.png" alt="A poster of tour dates.">
+            <div class="box-info">
+                <h2>NEW YEARS EVE CONCERT!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
             </div>
         </div>
 
-        <div class="band-member">
-            <div class="member-info">
-                <h2>Jerry Only</h2>
+        <div class="box-holder">
+            <div class="box-info">
+                <h2>HALLOWEEN CONCERT</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
             </div>
-            <img class="member-image" src="images/jerrymember.png" alt="A picture of Jerry Only, bass player of the band.">
+            <img src="images/poster2.jpg" alt="A poster of tour dates.">
         </div>
         </div>
 
