--- a/bandMembers.html
+++ b/bandMembers.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <meta name="description" content="Misfits band page FIENDCLUB.">
+    <meta name="keywords" content="Misfits, HorrorPunk, punk, horror, horror punk, misfits members, members">
+    <meta name="author" content="Bjørn-Tore Moskaug Jaavall">
+    <title>FIENDCLUB:: MISFIT MEMBERS</title>
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
@@ -93,7 +97,7 @@
 
 
     <footer>
-        
+        <h3 class="footer-text">Created by Bjørn-Tore Moskaug Jaavall</h3>
     </footer>
 </body>
 </html>
