--- a/tourDates.html
+++ b/tourDates.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <meta name="description" content="Misfits band page FIENDCLUB.">
+    <meta name="keywords" content="Misfits, HorrorPunk, punk, horror, horror punk, Tour Dates, misfits tour dates">
+    <meta name="author" content="Bjørn-Tore Moskaug Jaavall">
+    <title>FIENDCLUB::MISFITS TOURDATES</title>
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
@@ -56,7 +60,7 @@
 
         <div class="box-holder">
             <div class="box-info">
-                <h2>HALLOWEEN CONCERT</h2>
+                <h2>HALLOWEEN CONCERT!</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
@@ -68,7 +72,7 @@
     </main>
 
     <footer>
-        
+        <h3 class="footer-text">Created by Bjørn-Tore Moskaug Jaavall</h3>
     </footer>
 </body>
 </html>
