--- a/bandMembers.html
+++ b/bandMembers.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Misfits, HorrorPunk, punk, horror, horror punk, misfits members, members">
     <meta name="author" content="Bjørn-Tore Moskaug Jaavall">
     <title>FIENDCLUB:: MISFIT MEMBERS</title>
+    <link rel="stylesheet" href="https://use.typekit.net/shc1ssb.css">
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
