--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <meta name="description" content="Misfits band page FIENDCLUB.">
     <meta name="keywords" content="Misfits, HorrorPunk, punk, horror, horror punk, fiend club, fiendclub, contact, fiendclub contact">
     <meta name="author" content="Bjørn-Tore Moskaug Jaavall">
     <title>FIENDCLUB::CONTACT</title>
+    <link rel="stylesheet" href="https://use.typekit.net/shc1ssb.css">
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
