--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Misfits, HorrorPunk, punk, horror, horror punk, fiend club, fiendclub">
     <meta name="author" content="Bjørn-Tore Moskaug Jaavall">
     <title>FIENDCLUB::HOME</title>
+    <link rel="stylesheet" href="https://use.typekit.net/shc1ssb.css">
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
