--- a/tourDates.html
+++ b/tourDates.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Misfits, HorrorPunk, punk, horror, horror punk, Tour Dates, misfits tour dates">
     <meta name="author" content="Bjørn-Tore Moskaug Jaavall">
     <title>FIENDCLUB::MISFITS TOURDATES</title>
+    <link rel="stylesheet" href="https://use.typekit.net/shc1ssb.css">
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
