--- a/tourDates.html
+++ b/tourDates.html
@@ -50,7 +50,7 @@
         <h1>Tour Dates</h1>
         <div>
         <div class="box-holder">
-            <img src="images/poster1.png" alt="A poster of tour dates.">
+            <img class="posters" src="images/poster1.png" alt="A poster of tour dates.">
             <div class="box-info">
                 <h2>NEW YEARS EVE CONCERT!</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
@@ -66,7 +66,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
             </div>
-            <img src="images/poster2.jpg" alt="A poster of tour dates.">
+            <img class="posters" src="images/poster2.jpg" alt="A poster of tour dates.">
         </div>
         </div>
 
