--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
                 <div class="box-holder">
-                    <img src="images/1.png" alt="A ppicture of the album Walk Among Us.">
+                    <img class="album" src="images/1.png" alt="A ppicture of the album Walk Among Us.">
                     <div class="box-info">
                         <h2>Walk Among Us</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>                     
@@ -77,11 +77,11 @@
                         <h2>Static Age</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
                     </div>
-                    <img src="images/2.png" alt="A pictur of the album Static Age.">
+                    <img class="album" src="images/2.png" alt="A pictur of the album Static Age.">
                 </div>
 
                 <div class="box-holder">
-                    <img src="images/3.png" alt="A pictur of Misfits Collection 1.">
+                    <img class="album" src="images/3.png" alt="A pictur of Misfits Collection 1.">
                     <div class="box-info">
                         <h2>Missfits Collection 1</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>                     
@@ -93,11 +93,11 @@
                         <h2>American Psycho</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
                     </div>
-                    <img src="images/4.png" alt="A picture of the album American Psycho.">
+                    <img class="album" src="images/4.png" alt="A picture of the album American Psycho.">
                 </div>
 
                 <div class="box-holder">
-                    <img src="images/5.png" alt="A picture of the album Devils Rain.">
+                    <img class="album" src="images/5.png" alt="A picture of the album Devils Rain.">
                     <div class="box-info">
                         <h2>Devils Rain</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>                     
@@ -109,7 +109,7 @@
                         <h2>Evilive</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptas accusantium, suscipit sequi quos earum tempora sapiente soluta corrupti? Enim nemo ipsum, voluptate iure fugiat officiis aperiam nam ipsa?</p>
                     </div>
-                    <img src="images/6.png" alt="A ppicture of the album Evilive.">
+                    <img class="album" src="images/6.png" alt="A ppicture of the album Evilive.">
                 </div>
         </div>
 
