--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
         <div class="member-container">
-            <img src="images/members.png" class="member-photo" alt="Danzig cancer slug symbol. A sickle moon, with a lightning trough it." class="cancer-slug">
+            <img src="images/members.png" class="member-photo" alt="A picture of the band members at a graveyard">
         </div>
         
         <div class="disc-container">
