--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
             <ul class="nav-list">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link-current">
-                        <h3>Home</h3>
+                        <h3 class=heading-text>Home</h3>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="bandMembers.html" class="nav-link">
-                        <h3>Band Members</h3>
+                        <h3 class=heading-text>Band Members</h3>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="tourDates.html" class="nav-link">
-                        <h3>Tour Dates</h3>
+                        <h3 class=heading-text>Tour Dates</h3>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="contact.html" class="nav-link">
-                        <h3>Contact</h3>
+                        <h3 class=heading-text>Contact</h3>
                     </a>
                 </li>
             </ul>
